// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchButton should match the snapshot when disabled 1`] = `
<div>
  <div
    style="cursor: not-allowed; opacity: 0.5;"
  >
    <input
      hidden=""
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="hidden"
    />
    <input
      checked=""
      disabled=""
      hidden=""
      name="Test Switch Button"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="checkbox"
      value="on"
    />
    <button
      aria-checked="true"
      class="relative my-auto inline-flex h-6 w-11 flex-shrink-0 rounded-full border-2 border-transparent 
                    transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2
                    "
      data-checked=""
      data-disabled=""
      data-headlessui-state="checked disabled"
      data-testid="react-gdpr-cookie-consent-switch-button"
      disabled=""
      id="headlessui-switch-«r3»"
      role="switch"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow 
                    ring-0 transition duration-200 ease-in-out
                    translate-x-5"
      />
    </button>
  </div>
</div>
`;

exports[`SwitchButton should match the snapshot when not toggled 1`] = `
<div>
  <div>
    <input
      hidden=""
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="hidden"
    />
    <input
      hidden=""
      name="Test Switch Button"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="checkbox"
      value="on"
    />
    <button
      aria-checked="false"
      class="relative my-auto inline-flex h-6 w-11 flex-shrink-0 rounded-full border-2 border-transparent 
                    transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2
                    cursor-pointer"
      data-headlessui-state=""
      data-testid="react-gdpr-cookie-consent-switch-button"
      id="headlessui-switch-«r2»"
      role="switch"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow 
                    ring-0 transition duration-200 ease-in-out
                    translate-x-0"
      />
    </button>
  </div>
</div>
`;

exports[`SwitchButton should match the snapshot with minimal configuration 1`] = `
<div>
  <div>
    <input
      hidden=""
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="hidden"
    />
    <input
      checked=""
      hidden=""
      name="Test Switch Button"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="checkbox"
      value="on"
    />
    <button
      aria-checked="true"
      class="relative my-auto inline-flex h-6 w-11 flex-shrink-0 rounded-full border-2 border-transparent 
                    transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2
                    cursor-pointer"
      data-checked=""
      data-headlessui-state="checked"
      data-testid="react-gdpr-cookie-consent-switch-button"
      id="headlessui-switch-«r0»"
      role="switch"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow 
                    ring-0 transition duration-200 ease-in-out
                    translate-x-5"
      />
    </button>
  </div>
</div>
`;

exports[`SwitchButton should match the snapshot with screen reader label 1`] = `
<div>
  <div>
    <input
      hidden=""
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="hidden"
    />
    <input
      checked=""
      hidden=""
      name="Test Switch Button"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="checkbox"
      value="on"
    />
    <button
      aria-checked="true"
      class="relative my-auto inline-flex h-6 w-11 flex-shrink-0 rounded-full border-2 border-transparent 
                    transition-colors duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2
                    cursor-pointer"
      data-checked=""
      data-headlessui-state="checked"
      data-testid="react-gdpr-cookie-consent-switch-button"
      id="headlessui-switch-«r1»"
      role="switch"
      tabindex="0"
      type="button"
    >
      <span
        class="sr-only"
      >
        Test Label
      </span>
      <span
        aria-hidden="true"
        class="pointer-events-none inline-block h-5 w-5 transform rounded-full bg-white shadow 
                    ring-0 transition duration-200 ease-in-out
                    translate-x-5"
      />
    </button>
  </div>
</div>
`;
